1. Метод .of [#70623 #181141]